[project]
name = "Lunar-Lander-Deep_Q_Learn"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Proito", email = "1810308877@qq.com"},
]
dependencies = ["gymnasium[box2d]>=1.2.1", "box2d-py>=2.3.5", "matplotlib>=3.10.6", "torch>=2.7.1", "torchvision>=0.22.1"]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true
